--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="\Kyobitravel.html">Home</a></li>
+				<li><a href="/Kyobitravel.html">Home</a></li>
 				<li><a href="https://www.lonelyplanet.com/india">Destinations</a></li>
 				<li><a href="https://www.sotc.in/">Agency</a></li>
-				<li><a href="\contactus.html">Contact us</a></li>
+				<li><a href="/contactus.html">Contact us</a></li>
 			</ul>
 		</nav>
 		<h1>Kyobi Travel</h1>
