--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="/Kyobitravel.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 				<li><a href="https://www.lonelyplanet.com/india">Destinations</a></li>
 				<li><a href="https://www.sotc.in/">Agency</a></li>
 				<li><a href="/contactus.html">Contact us</a></li>
