--- a/contactus.html
+++ b/contactus.html
@@ -103,10 +103,10 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="/index.html">Home</a></li>
+			<li><a href="./index.html">Home</a></li>
 			<li><a href="https://www.lonelyplanet.com/india">Destinations</a></li>
 			<li><a href="https://www.sotc.in/">Agency</a></li>
-			<li><a href="/contactus.html">Contact us</a></li>
+			<li><a href="./contactus.html">Contact us</a></li>
 		</ul>
 	</nav>
 	<main>
